--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,23 +1,25 @@
+
 doctype html 
 html(lang = 'ua')
     head 
-        meta
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title= 'Vite+pug'
         link(rel='stylesheet', href='/assets/css/main.css')
     body 
         include ./components/header.pug
         section  
             .title 
-                h1 Explore investing
+                h2 Explore investing
                 .section
                 .search-box
                     .icon
                     svg(width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
                         path(d="M21 21L15 15M10 18C5.58 18 2 14.42 2 10C2 5.58 5.58 2 10 2C14.42 2 18 5.58 18 10C18 14.42 14.42 18 10 18Z" stroke="#4a4a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round")
-                    input(type="text" placeholder="Search for an asset")
+                    input.search-asset(type="text" placeholder="Search for an asset")
 
-        section
-            table.assets-table
+        section.content
+            table.content__assets-table
                 thead
                     tr
                         th Name
@@ -39,7 +41,7 @@ html(lang = 'ua')
                         td $ 350B
 
 
-        .news
+        .content__news
             h2 Latest news
             ul.news-list
             li
