--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,19 +1,17 @@
 @use 'variables' as *;
 
 header {
-    display: flex;
+  display: flex;
     font-size: 1em;
     background-color: #fff;
     border-bottom: 1px solid #ddd;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: center;
-  
+    height: 75px;
+    padding: 0 10vw ;
+    
     .container {
       display: flex;
       gap: 30 px;
       width: 100%;
-      max-width: 1200px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -24,25 +22,25 @@ header {
     .nav-right {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 50px;
     }
   
     .logo span {
       color: $primary-color;
       font-weight: bold;
-      font-size: 2em;
+      font-size: 1.75em;
     }
   
     .nav-link {
       color: #333;
       text-decoration: none;
-      font-size: 14px;
+      font-size: 1.25em;
       display: flex;
       align-items: center;
       gap: 4px;
   
-      .icon {
-        font-style: normal;
+      &:hover {
+        text-decoration: underline;
         color: #333;
       }
     }
