--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -25,6 +25,8 @@ a {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-size: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Робимо елементи форм однорідними */
