--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,4 @@ $font-size: 1rem;
 $background-color: #FFFFFF;
 $primary-color: #0052FF;
 $secondary-color: #D9D9D9;
+$font-family-base: 'Inter', sans-serif;
