Add symbols fetching from database and authentication pug and scss

--- a/src/pages/components/header.pug
+++ b/src/pages/components/header.pug
@@ -5,7 +5,7 @@ header
         span Investfund
     .nav-center
       a.nav-link(href="#") Assets
-      a.nav-link(href="#") My portfolio
+      button.nav-link(onClick="document.querySelector('#auth-popup').style.display = 'block';") My portfolio
     .nav-right
-      a.nav-link(href="#")
+      a.nav-link()
       .avatar
