--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,9 +5,10 @@ html(lang='ua')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Vite+pug
     link(rel='stylesheet', href='/assets/css/main.css')
-    script(type='module', src='/src/main.ts') // Include your TypeScript entry point
+    script(type='module', src='/src/main.ts')
   body
     include ./components/header.pug
+    include ./components/auth.pug
     section  
         .title 
             h2 Explore investing
@@ -24,22 +25,14 @@ html(lang='ua')
             table.content__assets-table
                 thead
                     tr
-                    th Ticker
-                    th Price
-                    th 24h Change(USD)
-                    th 24h Volume(USD)
+                        th Ticker
+                        th Price
+                        th 24h Change(USD)
+                        th 24h Volume(USD)
                 tbody#assets-table-body
                     // Rows will be dynamically added by JavaScript
 
         .content__news
             h3 Latest news
-            ul.news-list
-                li
-                    strong Powell's Independence Tested by Trump's Monetary Policy Demands
-                    span CNN Business – 12:28 March 15, 2022
-                li
-                    strong Tariffs are disrupting the spring homebuying season
-                    span Yahoo Finance – 12:15 March 15, 2022
-                li
-                    strong China set to leave lending rates steady, but tariffs raise easing bets
-                    span WSJ – 11:20 March 15, 2022
+            ul#news-list.news-list
+                // News will be dynamically added by JavaScript
