Added function to show the name of news' source; sorted news in published descending order

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -26,7 +26,7 @@ html(lang='ua')
                 thead
                     tr
                         th Ticker
-                        th Price
+                        th Price (USD)
                         th 24h Change(USD)
                         th 24h Volume(USD)
                 tbody#assets-table-body
