--- a/src/pages/components/header.pug
+++ b/src/pages/components/header.pug
@@ -5,7 +5,9 @@ header
         span Investfund
     .nav-center
       a.nav-link(href="#") Assets
-      button.nav-link(onClick="document.querySelector('#auth-popup').style.display = 'block';") My portfolio
+      button.nav-link(href="#") My portfolio
     .nav-right
-      a.nav-link()
-      .avatar
+      button.sign-in(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign in
+      button.sign-up(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign up
+      //- .avatar
+        svg(width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
