Added api for register/login

--- a/src/pages/components/header.pug
+++ b/src/pages/components/header.pug
@@ -7,7 +7,7 @@ header
       a.nav-link(href="#") Assets
       button.nav-link(href="#") My portfolio
     .nav-right
-      button.sign-in(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign in
-      button.sign-up(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign up
+      button.login-btn(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign in
+      button.register-btn(onClick="document.querySelector('#auth-popup').style.display = 'block';") Sign up
       //- .avatar
         svg(width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
