--- a/src/pages/components/auth.pug
+++ b/src/pages/components/auth.pug
@@ -1,13 +1,13 @@
 #auth-popup.auth-popup(style='display: none;')
   .auth-container
-    button.close-btn(type='button') ×
+    button.close-btn(type='button') x
     .auth-tabs
       button.tab.active(data-tab='login') Login
       button.tab(data-tab='register') Register
     #login-form.auth-form
       h3 Login
       form
-        input(type='text', placeholder='Username', required)
+        input(type='text', placeholder='Email', required)
         input(type='password', placeholder='Password', required)
         button(type='submit') Login
     #register-form.auth-form(style='display: none;')
