--- a/src/pages/components/header.pug
+++ b/src/pages/components/header.pug
@@ -12,10 +12,10 @@ header
       //-     svg(width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
       //-       path(d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zM12 14c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z", fill="currentColor")
       //-     span #{user.name}
-      //-   button.logout-btn(onclick="logout()") Logout
+      //-   button.logout-btn(onclick=logout()) Logout
       //- else
       //-   button.login-btn Sign in
       //-   button.register-btn Sign up
 
-        //- button.login-btn(onclick="document.querySelector('#auth-popup').style.display = 'block';") Sign in
-        //- button.register-btn(onclick="document.querySelector('#auth-popup').style.display = 'block';") Sign up
+      //-   button.login-btn(onclick="document.querySelector('#auth-popup').style.display = 'block';") Sign in
+      //-   button.register-btn(onclick="document.querySelector('#auth-popup').style.display = 'block';") Sign up
