Refactor header navigation links and add portfolio page; fix logout button markup

--- a/src/pages/components/header.pug
+++ b/src/pages/components/header.pug
@@ -4,8 +4,8 @@ header
       a.logo(href="#") 
         span Investfund
     .nav-center
-      a.nav-link(href="#") Assets
-      button.nav-link(href="#") My portfolio
+      a.nav-link(href="") Assets
+      button.nav-link(href="/portfolio") My portfolio
     .nav-right
       //- if user
       //-   .avatar
